# mov-cli-jellyplex

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: codeberg.yaml
mov_cli_example/: __init__.py  scraper.py
mov_cli_jellyplex/: __init__.py
mov_cli_jellyplex/jellyfin/: scraper.py
mov_cli_jellyplex/plex/: scraper.py
mov_cli_ms/: __init__.py
mov_cli_ms/jellyfin/: scraper.py
mov_cli_ms/plex/: scraper.py
