[project]
name = "mov-cli-jellyplex"
description = "A mov-cli v4 plugin for watching content from your media server."
authors = [
    {name = "Ananas", email = "ananas@ananas.moe"}
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = [
    "mov-cli",

    "jellyfin cli",
    "plex cli",
]
classifiers = [
    'Operating System :: Microsoft :: Windows :: Windows 11',
    'Operating System :: Microsoft :: Windows :: Windows 10',
    'Operating System :: POSIX :: Linux',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12'
]
dependencies = [
    "requests",
    "importlib-metadata; python_version<'3.8'",

    "plexapi"
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ruff",
    "build"
]

[project.urls]
GitHub = "https://github.com/mov-cli/mov-cli-jellyplex"
BugTracker = "https://github.com/mov-cli/mov-cli-jellyplex/issues"

[tool.setuptools.dynamic]
version = { attr = "mov_cli_jellyplex.__version__" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mov_cli_jellyplex*"]